--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,29 @@
+<!DOCTYPE html>
+
+{% load staticfiles %}
+
 <html>
-    <body>
-        <div>
-            {% block content %}{% endblock %}
-        </div>
-    </body>
+<head>
+    <title>{% if request.user.is_authenticated %}Logged In{% else %}Not Logged In{% endif %}</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}"/>
+</head>
+<body class="{% if request.user.is_authenticated %}logged-in{% else %}logged-out{% endif %}">
+
+{% if request.user.is_authenticated %}
+    <a href="/accounts/logout/" class="pull-right">Logout</a>
+    <img height="40" width="40" src="{{ request.user.profile.profile_image_url }}"/>
+    {% if request.user.first_name or request.user.last_name %}
+        {{ request.user.first_name }} {{ request.user.last_name }}
+    {% else %}
+        {{ request.user.username }}
+    {% endif %}
+    {% if request.user.profile.account_verified %} (verified) {% else %} (unverified) {% endif %}
+    <br>
+    <div>
+      {% block content %}{% endblock %}
+     </div>
+{% else %}
+    <a href="/accounts/login/" class="pull-right">Login</a>
+{% endif %}
+</body>
 </html>
